# crypto2025

./: .gitignore  Readme.md  pyproject.toml  pytest.ini
Configuration/: config.py  os_path_config.yaml
Utilities/: customlogger.py
base/: BasePage.py  DriverClass.py  config.yaml  driverConfig.yaml
tests/: runner.py
tests/Pages/: HomeMenu.py  HomePage.py  LandingPage.py  NineDayForecastPage.py  SZSEPage.py
tests/api/: session.py
tests/api/modules/: SZSEAPI.py
tests/elements/: Element_Repository_CN.py  Element_Repository_EN.py  Element_Repository_HK.py
tests/features/: HKO.feature  SZSE.feature
tests/steps_def/: conftest.py  test_hko.py  test_szse.py
tests/steps_def/q1/: q1.py
